// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected value 1`] = `
{
  "addUserTyping": [Function],
  "clearUserTyping": [Function],
  "group": null,
  "receiveComment": [Function],
  "receiveMessage": [Function],
  "receiveNotification": [Function],
  "receivePost": [Function],
  "receiveThread": [Function],
  "setupCoreEventHandlers": [Function],
}
`;

exports[`returns the expected value 2`] = `
{
  "payload": {
    "id": "11",
    "name": "Joe",
  },
  "type": "PeopleTyping/ADD_USER_TYPING",
}
`;

exports[`returns the expected value 3`] = `
{
  "payload": {
    "id": "11",
  },
  "type": "PeopleTyping/CLEAR_USER_TYPING",
}
`;

exports[`returns the expected value 4`] = `
{
  "meta": {
    "extractModel": "Comment",
  },
  "payload": {
    "data": {
      "comment": {
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_COMMENT",
}
`;

exports[`returns the expected value 5`] = `
{
  "meta": {
    "bumpUnreadCount": true,
    "extractModel": "Message",
  },
  "payload": {
    "data": {
      "message": {
        "createdAt": "2017-10-11T00:00:00.000Z UTC (MockDate: GMT-0700)",
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_MESSAGE",
}
`;

exports[`returns the expected value 6`] = `
{
  "meta": {
    "extractModel": "Notification",
  },
  "payload": {
    "data": {
      "notification": {
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_NOTIFICATION",
}
`;

exports[`returns the expected value 7`] = `
{
  "meta": {
    "extractModel": "Post",
  },
  "payload": {
    "data": {
      "post": {
        "id": "1",
        "title": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_POST",
}
`;

exports[`returns the expected value 8`] = `
{
  "meta": {
    "extractModel": "MessageThread",
  },
  "payload": {
    "data": {
      "thread": {
        "createdAt": "2017-10-11T00:00:00.000Z UTC (MockDate: GMT-0700)",
        "id": "1",
        "messages": [
          {
            "createdAt": "2017-10-11T00:00:00.000Z UTC (MockDate: GMT-0700)",
            "creator": undefined,
            "id": "1",
            "messageThread": "1",
            "text": "hi",
          },
        ],
        "unreadCount": 1,
        "updatedAt": "2017-10-11T00:00:00.000Z UTC (MockDate: GMT-0700)",
      },
    },
  },
  "type": "SocketListener/RECEIVE_THREAD",
}
`;
